WEB-1884 slider ready

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="ShareCloth Editor for fashion 3D printing">
     <meta name="keywords" content="3d printing, fashion, apparel, design, 3D render, fitting">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700%7CRoboto%7CJosefin+Sans:100,300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./assets/css/animate.css"> <!-- Resource style -->
     <link rel="stylesheet" href="./assets/css/owl.carousel.css">
@@ -78,80 +79,100 @@
           <div class="row">
             <div class="col-md-4 features-left">
               <div class="row">
-                <div class="col-md-12 wow" data-wow-delay="0.2s">
-                  <div class="icon">
-                    <i class="ion-xbox"></i>
-                  </div>
-                  <div class="feature-single">
-                    <h1>User garment pattern</h1>
-                    <p>
-                      You can print any garment having only its digital or digitized pattern. 
-					  Don't have one? Order it or download for free
-                    </p>
+                <div class="col-md-12 wow"  data-wow-delay="0.2s">
+                  <div class="feature" data-fotorama-id="1">
+                    <div class="icon">
+                      <i class="ion-xbox"></i>
+                    </div>
+                    <div class="feature-single">
+                      <h1>User garment pattern</h1>
+                      <p>
+                        You can print any garment having only its digital or digitized pattern.
+                        Don't have one? Order it or download for free
+                      </p>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-12 wow" data-wow-delay="0.3s">
-                  <div class="icon">
-                    <i class="ion-steam"></i>
-                  </div>
-                  <div class="feature-single">
-                    <h1>Customize design</h1>
-                    <p>
-                      Use cutting and design tools to make fast fixes and customize your garment
-                    </p>
+                  <div class="feature" data-fotorama-id="2">
+                    <div class="icon">
+                      <i class="ion-steam"></i>
+                    </div>
+                    <div class="feature-single">
+                      <h1>Customize design</h1>
+                      <p>
+                        Use cutting and design tools to make fast fixes and customize your garment
+                      </p>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-12 wow" data-wow-delay="0.4s">
-                  <div class="icon">
-                    <i class="ion-social-instagram-outline"></i>
-                  </div>
-                  <div class="feature-single">
-                    <h1>Fit it</h1>
-                    <p>
-					Check your design fit on a virtual model or a body scan.
-                    </p>
+                  <div class="feature"  data-fotorama-id="3">
+                    <div class="icon">
+                      <i class="ion-social-instagram-outline"></i>
+                    </div>
+                    <div class="feature-single">
+                      <h1>Fit it</h1>
+                      <p>
+                        Check your design fit on a virtual model or a body scan.
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
 
             <div class="col-md-4 wow" data-wow-delay="0.5s">
-              <img class="img-responsive" src="assets/images/iphone.png" alt="App" />
+              <div class="fotorama-feature" data-width="100%">
+                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+              </div>
             </div>
 
             <div class="col-md-4 features-left">
               <div class="row">
-                <div class="col-md-12 wow" data-wow-delay="0.6s">
-                  <div class="icon">
-                    <i class="ion-social-html5-outline"></i>
-                  </div>
-                  <div class="feature-single">
-                    <h1>Print it</h1>
-                    <p>
-					Remember how to print document? Print your garment in the similar way
-                    </p>
+                <div class="col-md-12 wow"  data-wow-delay="0.6s">
+                  <div class="feature" data-fotorama-id="4">
+                    <div class="icon">
+                      <i class="ion-social-html5-outline"></i>
+                    </div>
+                    <div class="feature-single">
+                      <h1>Print it</h1>
+                      <p>
+                        Remember how to print document? Print your garment in the similar way
+                      </p>
+                    </div>
                   </div>
                 </div>
-                <div class="col-md-12 wow" data-wow-delay="0.7s">
-                  <div class="icon">
-                    <i class="ion-social-github"></i>
-                  </div>
-                  <div class="feature-single">
-                    <h1>Share</h1>
-                    <p>
-                    Share your precise garment 3D sample with your clients, friends of ShareCloth' community
-					</p>
+                <div class="col-md-12 wow"  data-wow-delay="0.7s">
+                  <div class="feature" data-fotorama-id="5">
+                    <div class="icon">
+                      <i class="ion-social-github"></i>
+                    </div>
+                    <div class="feature-single">
+                      <h1>Share</h1>
+                      <p>
+                        Share your precise garment 3D sample with your clients, friends of ShareCloth' community
+                      </p>
+                    </div>
                   </div>
                 </div>
                 <div class="col-md-12 wow" data-wow-delay="0.8s">
-                  <div class="icon">
-                    <i class="ion-social-dropbox"></i>
-                  </div>
-                  <div class="feature-single">
-                    <h1>Re-use</h1>
-                    <p>
-                    Create your own digital library of patterns, made projects and fabric presets to simplify new creation
-					</p>
+                  <div class="feature"  data-fotorama-id="6">
+                    <div class="icon">
+                      <i class="ion-social-dropbox"></i>
+                    </div>
+                    <div class="feature-single">
+                      <h1>Re-use</h1>
+                      <p>
+                        Create your own digital library of patterns, made projects and fabric presets to simplify new creation
+                      </p>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -374,6 +395,7 @@
 
 <!-- Jquery and Js Plugins -->
   <script type="text/javascript" src="assets/js/jquery-2.1.1.js"></script>
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
   <script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/js/plugins.js"></script>
   <script type="text/javascript" src="assets/js/menu.js"></script>
