--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6">
-              <img class="img-responsive wow" src="assets/images/hero.jpg" alt="Hero Image" />
+              <img class="img-responsive wow" src="assets/images/1-1.png" alt="Pic" />
             </div>
             <div class="col-md-6">
               <div class="hero-content">
@@ -186,7 +186,7 @@
          <div class="features-inner">
            <div class="row">
              <div class="col-md-6">
-               <img class="img-responsive wow fadeIn" src="assets/images/details.jpg" alt="Features" />
+               <img class="img-responsive wow fadeIn" src="assets/images/2.png" alt="Features" />
              </div>
              <div class="col-md-6">
                <div class="features-list">
