--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </p>
 				<ul class="list-inline">
 					<li><a class="btn btn-primary btn-action popup wow" data-wow-delay="0.2s" href="#">Know More</a></li>
-					<li><a class="btn btn-primary btn-action popup wow" data-wow-delay="0.2s" href="#">Sign up for notification</a></li>
+					<li><a class="btn btn-primary btn-action popup wow page-scroll" data-wow-delay="0.2s" href="#subscribe">Sign up for notification</a></li>
 				</ul>
               </div>
             </div>
@@ -334,7 +334,7 @@
       </div>
       </div>
 -->
-	<div class="about text-center">
+	<div class="about text-center" id="subscribe">
       <div class="container">
         <div class="about-content">
           <h2 class="wow" data-wow-delay="0.1s">The new age of home-made printed fashion is rapidly growing to change the way how human produce sustainable, recyclable and made-to-order fashion
