--- a/index.html
+++ b/index.html
@@ -36,10 +36,8 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a class="page-scroll" href="#main">Product</a></li>
-                    <li><a class="page-scroll" href="#features">Features</a></li>
-                    <li><a class="page-scroll" href="#review-section">Reviews</a></li>
-                    <li><a class="page-scroll" href="#pricing">Pricing</a></li>
+                    <li><a class="page-scroll" href="#how">Product</a></li>
+                    <li><a class="page-scroll" href="#features" page-scroll>Features</a></li>
                     <li><a class="page-scroll" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -58,11 +56,10 @@
               <div class="hero-content">
                 <h1 class="wow" data-wow-delay="0s">Empowering innovators in fashion 3D-printing</h1>
                 <p class="wow" data-wow-delay="0.2s">
-                	ShareCloth introduces desktop editor for clothing 3D-printing. Bridging the gap between fashion design and 3D graphic design, ShareCloth helps fashion designer to fit, customize and print garment from traditional digital pattern.
+                	ShareCloth is introducing a desktop editor for clothing 3D-printing. Bridging the gap between fashion design and 3D graphic design, ShareCloth helps fashion designers fit, customize, and print garments by using regular digital patterns.
                 </p>
 				<ul class="list-inline">
-					<li><a class="btn btn-primary btn-action popup wow" data-wow-delay="0.2s" href="#">Know More</a></li>
-					<li><a class="btn btn-primary btn-action popup wow page-scroll" data-wow-delay="0.2s" href="#subscribe">Sign up for notification</a></li>
+					<li><a class="btn btn-primary btn-action popup wow page-scroll" data-wow-delay="0.2s" href="#subscribe">Sign up for notifications</a></li>
 				</ul>
               </div>
             </div>
@@ -72,49 +69,48 @@
 
       <div class="app-features text-center">
         <div class="container">
-          <h1 class="wow" data-wow-delay="0.1s">How it works?</h1>
+          <h1 class="wow" data-wow-delay="0.1s">How does it work?</h1>
           <p class="wow" data-wow-delay="0.2s">
-           ShareCloth Editor allows fashion designer to connect knowledge in design and cutting <br>with revolutionary 3D-printing technology
+           	ShareCloth Editor allows fashion designers to connect their knowledge of garment design with revolutionary 3D-printing technology
           </p>
-          <div class="row">
+          <div class="row" id="how">
             <div class="col-md-4 features-left">
               <div class="row">
                 <div class="col-md-12 wow"  data-wow-delay="0.2s">
-                  <div class="feature" data-fotorama-id="1">
+                  <div class="feature" data-fotorama-id="0">
                     <div class="icon">
-                      <i class="ion-xbox"></i>
+                      <i class="ion-android-document"></i>
                     </div>
                     <div class="feature-single">
                       <h1>User garment pattern</h1>
                       <p>
-                        You can print any garment having only its digital or digitized pattern.
-                        Don't have one? Order it or download for free
+						You can print any garment. All you need is a digital or digitized pattern! Don’t have one? Order or download one for free today!
                       </p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-12 wow" data-wow-delay="0.3s">
-                  <div class="feature" data-fotorama-id="2">
+                  <div class="feature" data-fotorama-id="1">
                     <div class="icon">
-                      <i class="ion-steam"></i>
+                      <i class="ion-ios-color-wand"></i>
                     </div>
                     <div class="feature-single">
-                      <h1>Customize design</h1>
+                      <h1>Customize your design</h1>
                       <p>
-                        Use cutting and design tools to make fast fixes and customize your garment
+                       	Use cutting and design tools to make quick fixes and customize your garment
                       </p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-12 wow" data-wow-delay="0.4s">
-                  <div class="feature"  data-fotorama-id="3">
+                  <div class="feature"  data-fotorama-id="2">
                     <div class="icon">
-                      <i class="ion-social-instagram-outline"></i>
+                      <i class="ion-ios-body"></i>
                     </div>
                     <div class="feature-single">
                       <h1>Fit it</h1>
                       <p>
-                        Check your design fit on a virtual model or a body scan.
+						Check your design fit on a virtual model or body scan
                       </p>
                     </div>
                   </div>
@@ -124,11 +120,10 @@
 
             <div class="col-md-4 wow" data-wow-delay="0.5s">
               <div class="fotorama-feature" data-width="100%">
-                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
-                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
-                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
-                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
-                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+                <img class="img-responsive" src="assets/images/2-1.png" alt="app" />
+                <img class="img-responsive" src="assets/images/2-2.png" alt="app" />
+                <img class="img-responsive" src="assets/images/2-3.png" alt="app" />
+                <img class="img-responsive" src="assets/images/2-4.png" alt="app" />
                 <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
                 <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
               </div>
@@ -137,40 +132,40 @@
             <div class="col-md-4 features-left">
               <div class="row">
                 <div class="col-md-12 wow"  data-wow-delay="0.6s">
-                  <div class="feature" data-fotorama-id="4">
+                  <div class="feature" data-fotorama-id="3">
                     <div class="icon">
-                      <i class="ion-social-html5-outline"></i>
+                      <i class="ion-ios-printer"></i>
                     </div>
                     <div class="feature-single">
                       <h1>Print it</h1>
                       <p>
-                        Remember how to print document? Print your garment in the similar way
+						Print your 3D garments just like a word document!
                       </p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-12 wow"  data-wow-delay="0.7s">
-                  <div class="feature" data-fotorama-id="5">
+                  <div class="feature" data-fotorama-id="4">
                     <div class="icon">
-                      <i class="ion-social-github"></i>
+                      <i class="ion-ios-cloud-upload"></i>
                     </div>
                     <div class="feature-single">
                       <h1>Share</h1>
                       <p>
-                        Share your precise garment 3D sample with your clients, friends of ShareCloth' community
+                        Share your precise 3D garment sample with your clients and friends in the ShareCloth community
                       </p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-12 wow" data-wow-delay="0.8s">
-                  <div class="feature"  data-fotorama-id="6">
+                  <div class="feature"  data-fotorama-id="5">
                     <div class="icon">
                       <i class="ion-social-dropbox"></i>
                     </div>
                     <div class="feature-single">
                       <h1>Re-use</h1>
                       <p>
-                        Create your own digital library of patterns, made projects and fabric presets to simplify new creation
+                        Create your own digital pattern library, make projects and fabric presets to streamline creating new designs
                       </p>
                     </div>
                   </div>
@@ -193,10 +188,10 @@
                  <h1 class="wow" data-wow-delay="0.1s">Features</h1>
                  <ul class="wow" data-wow-delay="0.2s">
                    <li>Easy-to-use application for Mac and Windows</li>
-                   <li>Turn flat digital pattern into a 3D printed garment with no pain</li>
-                   <li>Customize the fit and design with ease</li>
-                   <li>Fit made garment on the virtual model or body scan</li>
-				   <li>Applicable with your home 3D printer</li>		
+                   <li>Turn flat digital patterns into a 3D printed garment hassle-free</li>
+                   <li>Customize your fit and design with ease</li>
+                   <li>Fit made garments on a virtual model or body scan</li>
+				   <li>Applicable with a 3D printer</li>		
                    <li>Use material filament presets for precise garment simulation</li>
                  </ul>
                </div>
@@ -337,11 +332,11 @@
 	<div class="about text-center" id="subscribe">
       <div class="container">
         <div class="about-content">
-          <h2 class="wow" data-wow-delay="0.1s">The new age of home-made printed fashion is rapidly growing to change the way how human produce sustainable, recyclable and made-to-order fashion
+          <h2 class="wow" data-wow-delay="0.1s">The new market of home-made printed fashion is rapidly growing, changing the way people produce sustainable, recyclable, and made-to-order garments
           </h2>
         	<div class="form wow" style="margin-top:50px; text-align:center;" data-wow-delay="0.3s">
           	<form class="subscribe-form wow" style="margin-top:30px; text-align:center;" action="assets/php/subscribe.php" method="post" accept-charset="UTF-8" enctype="application/x-www-form-urlencoded" autocomplete="off" novalidate>
-	              <input class="mail" type="email" name="email" placeholder="Join the wait list" autocomplete="off"><input class="submit-button" type="submit" value="Subscribe">
+	              <input class="mail" type="email" name="email" placeholder="Subscribe now!" autocomplete="off"><input class="submit-button" type="submit" value="Subscribe">
 	            </form>
           	<div class="success-message"></div>
 				<div class="error-message"></div>
@@ -357,13 +352,13 @@
               <div class="col-md-6">
 				  <p>ShareCloth.com</p>
                   <p>
-					Empowering the world of digital fashion
+					Empowering fashion designers worldwide! Learn more about our products!
 					<br class="hidden-xs"> <a href="#" style="color:#927f54;">Learn more</a> about our products
                   </p>
 
                 <div class="footer-text">
                   <p>
-                    Copyright © 2014-2017 ShareCloth Inc. All Rights Reserved.
+                    Copyright 2014-2017 ShareCloth Inc. All Rights Reserved
                   </p>
                 </div>
               </div>
@@ -371,9 +366,9 @@
               <div class="col-md-6">
                 <div id="contact" class="contact text-center">
                   <i class="ion-ios-chatboxes-outline"></i>
-                  <h1>Need Help ?</h1>
+                  <h1>Need Help?</h1>
                   <p>
-                    Contact our 24/7 customer support if you have any <br class="hidden-xs"> questions. We'll help you out.
+                   	Contact our 24/7 customer support if you have any questions or concerns. We’ll be glad to assist you!
                   </p>
                   <a href="mailto:team@sharecloth.com">team@sharecloth.com</a>
                 </div>
