--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Advent Multipurpose Landing Page Template</title>
+    <title>Fashion 3D printing with ShareCloth</title>
     <link rel="icon" href="./assets/logos/favicon.png" type="image/png" sizes="16x16">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
