--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 <img class="img-responsive" src="assets/images/2-2.png" alt="app" />
                 <img class="img-responsive" src="assets/images/2-3.png" alt="app" />
                 <img class="img-responsive" src="assets/images/2-4.png" alt="app" />
-                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
-                <img class="img-responsive" src="assets/images/iphone.png" alt="app" />
+                <img class="img-responsive" src="assets/images/2-5.png" alt="app" />
+                <img class="img-responsive" src="assets/images/2-6.png" alt="app" />
               </div>
             </div>
 
@@ -165,7 +165,7 @@
                     <div class="feature-single">
                       <h1>Re-use</h1>
                       <p>
-                        Create your own digital pattern library, make projects and fabric presets to streamline creating new designs
+                        Create your own digital pattern library, make projects and fabric presets to streamline creating new styles
                       </p>
                     </div>
                   </div>
@@ -181,7 +181,7 @@
          <div class="features-inner">
            <div class="row">
              <div class="col-md-6">
-               <img class="img-responsive wow fadeIn" src="assets/images/2.png" alt="Features" />
+               <img class="img-responsive wow" src="assets/images/3.jpg" alt="Features"/>
              </div>
              <div class="col-md-6">
                <div class="features-list">
@@ -355,12 +355,19 @@
 					Empowering fashion designers worldwide! Learn more about our products!
 					<br class="hidden-xs"> <a href="#" style="color:#927f54;">Learn more</a> about our products
                   </p>
-
                 <div class="footer-text">
                   <p>
                     Copyright 2014-2017 ShareCloth Inc. All Rights Reserved
                   </p>
                 </div>
+				  <p>
+				  	<ul class="list-inline">
+				  		<li><a href="http://facebook.com/shareclothcom"><img src="assets/logos/Facebook.png" alt="social logo" /></a></li>
+						<li><a href="http://twitter.com/sharecloth"><img src="assets/logos/Twitter.png" alt="Twitter logo"></a>
+						<li><a href="https://www.linkedin.com/company/9194254"><img src="assets/logos/Linkedin.png" alt="Blog logo"></a></li>
+						<li><a href="http://www.youtube.com/channel/UC2ZTjdI7UTgiPTKFmCvivjg"><img src="assets/logos/YouTube.png" alt="Youtube"></a></li>		
+				  	</ul>
+				  </p>
               </div>
 
               <div class="col-md-6">
