--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-md-12 wow"  data-wow-delay="0.7s">
+                <div class="col-md-12 wow disabled"  data-wow-delay="0.7s">
                   <div class="feature" data-fotorama-id="4">
                     <div class="icon">
-                      <i class="ion-ios-cloud-upload"></i>
+                      <i class="ion-woman"></i>
                     </div>
                     <div class="feature-single">
-                      <h1>Share</h1>
+                      <h1>Wear</h1>
                       <p>
-                        Share your precise 3D garment sample with your clients and friends in the ShareCloth community
+                        Change the world by changing your self and wearing sustainable and biodegradable garments you've made by yourself
                       </p>
                     </div>
                   </div>
@@ -181,7 +181,7 @@
          <div class="features-inner">
            <div class="row">
              <div class="col-md-6">
-               <img class="img-responsive wow" src="assets/images/3.jpg" alt="Features"/>
+               <img class="img-responsive wow" src="assets/images/2_1.gif" alt="Features"/>
              </div>
              <div class="col-md-6">
                <div class="features-list">
