--- a/index.html
+++ b/index.html
@@ -362,10 +362,10 @@
                 </div>
 				  <p>
 				  	<ul class="list-inline">
-				  		<li><a href="http://facebook.com/shareclothcom"><img src="assets/logos/Facebook.png" alt="social logo" /></a></li>
-						<li><a href="http://twitter.com/sharecloth"><img src="assets/logos/Twitter.png" alt="Twitter logo"></a>
-						<li><a href="https://www.linkedin.com/company/9194254"><img src="assets/logos/Linkedin.png" alt="Blog logo"></a></li>
-						<li><a href="http://www.youtube.com/channel/UC2ZTjdI7UTgiPTKFmCvivjg"><img src="assets/logos/YouTube.png" alt="Youtube"></a></li>		
+				  		<li><a href="http://facebook.com/shareclothcom"><img src="assets/logos/facebook.png" alt="social logo" /></a></li>
+						<li><a href="http://twitter.com/sharecloth"><img src="assets/logos/twitter.png" alt="Twitter logo"></a>
+						<li><a href="https://www.linkedin.com/company/9194254"><img src="assets/logos/linkedin.png" alt="Blog logo"></a></li>
+						<li><a href="http://www.youtube.com/channel/UC2ZTjdI7UTgiPTKFmCvivjg"><img src="assets/logos/youtube.png" alt="Youtube"></a></li>		
 				  	</ul>
 				  </p>
               </div>
